# game2

./: Cargo.toml
resources/: tile.frag.sprv  tile.vert.sprv
src/: array2d.rs  bimap.rs  client_app.rs  gen_map.rs  gl_460_core.rs  handle_map.rs  main.rs  net.rs  net_manager.rs  time.rs  window.rs
src/client/: client.rs  game_frame.rs  game_render_desc.rs  game_render_state.rs  game_render_state_wgpu.rs  game_update_state.rs  mod.rs
src/client/shaders/: chromatic_aberration.wgsl  debug_quad.frag  debug_quad.vert  light.frag  light.vert  light.wgsl  sprite.wgsl  tile.frag  tile.vert  tile.wgsl
src/server/: game_update_state.rs  mod.rs  server.rs
src/shared/: collision.rs  entity.rs  humanoid.rs  light.rs  mod.rs  net.rs  terrain_gen.rs  tile.rs
