[package]
name = "duplicarria2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
lazy_static = "1.4.0"
glfw = "0.55.0"
nalgebra-glm = "0.18.0"
png = "0.17.13"
once_cell = "1.19.0"
wgpu = { version = "0.19", optional = true }
pollster = { version = "0.3", optional = true }

[features]
opengl = []
default = ["wgpu", "pollster"]