[package]
name = "duplicarria2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
lazy_static = "1.4.0"
once_cell = "1.19.0"
futures = "0.3.30"
nalgebra-glm = "0.18.0"
image = { version = "0.25.1", features = ["png"] }
winit = "0.29.15"
wgpu = "0.19.3"
bytemuck = { version = "1.15.0", features = ["derive"] }
