[package]
name = "duplicarria2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
lazy_static = "1.4.0"
once_cell = "1.19.0"
futures = "0.3.30"
nalgebra-glm = { version = "0.18.0", default-features = false }
image = { version = "0.25.1", default-features = false, features = ["png"] }
winit = { version = "0.29.15", default-features = false, features = ["x11", "rwh_06"]  }
wgpu = { version = "0.19.3", default-features = false, features = ["wgsl", "metal"] }
bytemuck = { version = "1.15.0", default-features = false, features = ["derive"] }
laminar = "0.5.0"
bitcode = "0.6.0"
crossbeam-channel = "0.5.12"
miniz_oxide = "0.7.2"
